--- a/#src/common/gallery/_gallery.html
+++ b/#src/common/gallery/_gallery.html
@@ -13,50 +13,62 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="gallery__img ibg">
-                        <picture>
-                            <source srcset="img/photo/gallery-img.jpg" media="(min-width: 768px)" >
-                            <img src="img/photo/gallery-img-mob.jpg" alt="img">
-                        </picture>
+                        <div class="gallery__img-1">
+                            <div class="label">до</div>
+                            <img src="img/photo/gallery-img-1.jpg" alt="">
+                        </div>
+                        <div class="gallery__img-2">
+                            <div class="label">после</div>
+                            <img src="img/photo/gallery-img-2.jpg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="gallery__img ibg">
-                        <picture>
-                            <source srcset="img/photo/gallery-img.jpg" media="(min-width: 768px)" >
-                            <img src="img/photo/gallery-img-mob.jpg" alt="img">
-                        </picture>
+                        <div class="gallery__img-1">
+                            <div class="label">до</div>
+                            <img src="img/photo/gallery-img-1.jpg" alt="">
+                        </div>
+                        <div class="gallery__img-2">
+                            <div class="label">после</div>
+                            <img src="img/photo/gallery-img-2.jpg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="gallery__img ibg">
-                        <picture>
-                            <source srcset="img/photo/gallery-img.jpg" media="(min-width: 768px)" >
-                            <img src="img/photo/gallery-img-mob.jpg" alt="img">
-                        </picture>
+                        <div class="gallery__img-1">
+                            <div class="label">до</div>
+                            <img src="img/photo/gallery-img-1.jpg" alt="">
+                        </div>
+                        <div class="gallery__img-2">
+                            <div class="label">после</div>
+                            <img src="img/photo/gallery-img-2.jpg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="gallery__img ibg">
-                        <picture>
-                            <source srcset="img/photo/gallery-img.jpg" media="(min-width: 768px)" >
-                            <img src="img/photo/gallery-img-mob.jpg" alt="img">
-                        </picture>
+                        <div class="gallery__img-1">
+                            <div class="label">до</div>
+                            <img src="img/photo/gallery-img-1.jpg" alt="">
+                        </div>
+                        <div class="gallery__img-2">
+                            <div class="label">после</div>
+                            <img src="img/photo/gallery-img-2.jpg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="gallery__img ibg">
-                        <picture>
-                            <source srcset="img/photo/gallery-img.jpg" media="(min-width: 768px)" >
-                            <img src="img/photo/gallery-img-mob.jpg" alt="img">
-                        </picture>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="gallery__img ibg">
-                        <picture>
-                            <source srcset="img/photo/gallery-img.jpg" media="(min-width: 768px)" >
-                            <img src="img/photo/gallery-img-mob.jpg" alt="img">
-                        </picture>
+                        <div class="gallery__img-1">
+                            <div class="label">до</div>
+                            <img src="img/photo/gallery-img-1.jpg" alt="">
+                        </div>
+                        <div class="gallery__img-2">
+                            <div class="label">после</div>
+                            <img src="img/photo/gallery-img-2.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
