--- a/#src/common/our-services/_our-services.html
+++ b/#src/common/our-services/_our-services.html
@@ -42,5 +42,9 @@
                 })
             </li>
         </ul>
+
+        <div class="text-center pt-5">
+            <a href="#" class="btn btn--dark">Посмотреть все услуги</a>
+        </div>
     </div>
 </section>
