--- a/#src/testimonials.html
+++ b/#src/testimonials.html
@@ -124,7 +124,7 @@
                             </li>
                         </ul>
                         <div data-tab-content="0">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Анатолий",
@@ -177,6 +177,42 @@
                                     "starsValue": "5",
                                     "source": true,
                                     "button": true
+                                    })
+                                </li>
+                                <li>
+                                    @@include('common/testimonial-card/_testimonial-card.html', {
+                                    "name": "Анатолий",
+                                    "date": "22.10.2021",
+                                    "starsValue": "5",
+                                    "source": true,
+                                    "button": true
+                                    })
+                                </li>
+                                <li>
+                                    @@include('common/testimonial-card/_testimonial-card.html', {
+                                    "name": "Светлана Бондаренко",
+                                    "date": "15.09.2021",
+                                    "starsValue": "4.5",
+                                    "source": true,
+                                    "button": false
+                                    })
+                                </li>
+                                <li>
+                                    @@include('common/testimonial-card/_testimonial-card.html', {
+                                    "name": "Анатолий",
+                                    "date": "22.10.2021",
+                                    "starsValue": "5",
+                                    "source": true,
+                                    "button": true
+                                    })
+                                </li>
+                                <li>
+                                    @@include('common/testimonial-card/_testimonial-card.html', {
+                                    "name": "Светлана Бондаренко",
+                                    "date": "15.09.2021",
+                                    "starsValue": "4.5",
+                                    "source": true,
+                                    "button": false
                                     })
                                 </li>
                                 <li>
@@ -200,7 +236,7 @@
                             </ul>
                         </div>
                         <div data-tab-content="1">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Константин К.",
@@ -258,7 +294,7 @@
                             </ul>
                         </div>
                         <div data-tab-content="2">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Анатолий",
@@ -334,7 +370,7 @@
                             </ul>
                         </div>
                         <div data-tab-content="3">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Константин К.",
@@ -410,7 +446,7 @@
                             </li>
                         </ul>
                         <div data-tab-content="0">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Анатолий",
@@ -486,7 +522,7 @@
                             </ul>
                         </div>
                         <div data-tab-content="1">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Константин К.",
@@ -544,7 +580,7 @@
                             </ul>
                         </div>
                         <div data-tab-content="2">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Анатолий",
@@ -597,6 +633,24 @@
                                     "starsValue": "5",
                                     "source": true,
                                     "button": true
+                                    })
+                                </li>
+                                <li>
+                                    @@include('common/testimonial-card/_testimonial-card.html', {
+                                    "name": "Анатолий",
+                                    "date": "22.10.2021",
+                                    "starsValue": "5",
+                                    "source": true,
+                                    "button": true
+                                    })
+                                </li>
+                                <li>
+                                    @@include('common/testimonial-card/_testimonial-card.html', {
+                                    "name": "Светлана Бондаренко",
+                                    "date": "15.09.2021",
+                                    "starsValue": "4.5",
+                                    "source": true,
+                                    "button": false
                                     })
                                 </li>
                                 <li>
@@ -620,7 +674,7 @@
                             </ul>
                         </div>
                         <div data-tab-content="3">
-                            <ul class="testimonials-list">
+                            <ul class="testimonials-list" data-testimonials-list>
                                 <li>
                                     @@include('common/testimonial-card/_testimonial-card.html', {
                                     "name": "Константин К.",
