--- a/#src/services.html
+++ b/#src/services.html
@@ -699,7 +699,7 @@
                 @@include('common/testimonials/_testimonials.html', {
                     "type": "type-1"
                 })
-                <div class="button-wrap button-wrap--bottom text-end">
+                <div class="button-wrap button-wrap--bottom text-center">
                     <a href="#" class="btn btn--dark">Посмотреть все отзывы</a>
                 </div>
             </div>
