--- a/#src/common/promo-header/_promo-header.html
+++ b/#src/common/promo-header/_promo-header.html
@@ -38,7 +38,7 @@
                             Мы рады предложить вам передовые методики лечения
                         </div>
                         <a href="#" class="promo-header__btn-1 btn btn--light">Подробнее о клинике</a>
-                        <a href="#" class="promo-header__btn-2 btn btn--dark btn-transparent">Записаться на консультацию</a>
+                        <a href="#ctaPopup" data-popup="open-popup" class="promo-header__btn-2 btn btn--dark btn-transparent">Записаться на консультацию</a>
                     </div>
                 </div>
             </div>
