--- a/#src/index.html
+++ b/#src/index.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<div class="why-us__bottom text-center">
-					<a href="#" class="btn btn-dark">Записаться на консультацию</a>
+					<a href="#ctaPopup" data-popup="open-popup" class="btn btn-dark">Записаться на консультацию</a>
 				</div>
 			</div>
 		</section>
@@ -241,6 +241,8 @@
 	<!-- == FOOTER ================== -->
 	@@include('common/footer/_footer.html',{})
 	<!-- == // FOOTER ================== -->
+
+	@@include('common/popup/_popup.html',{})
 
 	@@include('_js-bottom.html',{})
 </body>
