--- a/#src/stock.html
+++ b/#src/stock.html
@@ -21,7 +21,7 @@
         <div class="container-md">
             <div class="head head--top">
                 <h2 class="head__title">Акции</h2>
-                <div class="head__subtitle text">
+                <div class="head__subtitle">
                     Клиника «Дана» предлагает различные акции на платные медицинские услуги. Скидки на услуги врачей,
                     бесплатные консультации специалистов.
                 </div>
