--- a/#src/team.html
+++ b/#src/team.html
@@ -349,7 +349,7 @@
     <!-- == FOOTER ================== -->
     @@include('common/footer/_footer.html',{})
     <!-- == // FOOTER ================== -->
-
+    @@include('common/popup/_popup.html',{})
     @@include('_js-bottom.html',{})
 </body>
 
