--- a/#src/common/services-side-panel/_services-side-panel.html
+++ b/#src/common/services-side-panel/_services-side-panel.html
@@ -3,7 +3,7 @@
         Услуги:
     </h3>
     <ul class="services-side-panel__list text-content" data-spoller="one">
-        <li>
+        <li class="item-active">
             <a href="#" data-spoller-trigger>Имплантация</a>
             <ul>
                 <li><a href="#">Наращивание костной ткани при имплантации зубов</a></li>
