--- a/#src/services.html
+++ b/#src/services.html
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
                 <div data-tab-content="0">
-                    <ul class="services-questions__list">
+                    <ul class="services-questions__list" data-services-questions-list>
                         <li>
                             <a href="#" class="services-questions-card">
                                 <div class="services-questions-card__icon">
@@ -258,7 +258,7 @@
                     </ul>
                 </div>
                 <div data-tab-content="1">
-                    <ul class="services-questions__list">
+                    <ul class="services-questions__list" data-services-questions-list>
                         <li>
                             <a href="#" class="services-questions-card">
                                 <div class="services-questions-card__icon">
@@ -364,7 +364,7 @@
                     </ul>
                 </div>
                 <div data-tab-content="2">
-                    <ul class="services-questions__list">
+                    <ul class="services-questions__list" data-services-questions-list>
                         <li>
                             <a href="#" class="services-questions-card">
                                 <div class="services-questions-card__icon">
@@ -439,7 +439,7 @@
                     </ul>
                 </div>
                 <div data-tab-content="3">
-                    <ul class="services-questions__list">
+                    <ul class="services-questions__list" data-services-questions-list>
                         <li>
                             <a href="#" class="services-questions-card">
                                 <div class="services-questions-card__icon">
@@ -473,7 +473,7 @@
                     </ul>
                 </div>
                 <div data-tab-content="4">
-                    <ul class="services-questions__list">
+                    <ul class="services-questions__list" data-services-questions-list>
                         <li>
                             <a href="#" class="services-questions-card">
                                 <div class="services-questions-card__icon">
