--- a/#src/team.html
+++ b/#src/team.html
@@ -65,6 +65,7 @@
                         </li>
                     </ul>
                     <ul class="team-list">
+                        <h3 class="team-list__title">Хирурги</h3>
                         <li data-filter-content="0,1,2,4,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-1.png",
@@ -105,6 +106,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
+                        <h3 class="team-list__title">Ортопеды</h3>
                         <li data-filter-content="0,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-5.png",
@@ -145,6 +147,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
+                        <h3 class="team-list__title">Ортодонты</h3>
                         <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-9.png",
