--- a/#src/common/team-carousel/_team-carousel.html
+++ b/#src/common/team-carousel/_team-carousel.html
@@ -101,7 +101,7 @@
                             <a href="#" class="team-carousel-card__calendar" data-tooltip="Записаться на прием">
                                 <svg><use xlink:href="img/icons/sprites.svg#calendar"></use></svg>
                             </a>
-                            <a href="#" class="team-carousel-card__body not-hover">
+                            <a href="index.html" class="team-carousel-card__body not-hover">
                                 <div class="team-carousel-card__name">Екимова Мария</div>
                                 <div class="team-carousel-card__position">стоматолог-терапевт</div>
                                 <div class="team-carousel-card__photo">
