--- a/#src/services-detail.html
+++ b/#src/services-detail.html
@@ -69,6 +69,9 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="main-grid__content-row">
+                            @@include('common/advantage/_advantage.html')
+                        </div>
                         <div id="anchor1" class="main-grid__content-row">
                             <div class="box box--has-text box--big-padding">
                                 <div class="text-content last">
