--- a/#src/_head.html
+++ b/#src/_head.html
@@ -57,5 +57,8 @@
 			}
 		}
 	</style>
+	        <script src="https://api-maps.yandex.ru/2.1/?apikey=1eda18f0-d3c9-44c1-990d-210d66fa5be0&lang=ru_RU"
+            type="text/javascript">
+            </script>
 	@@include('_js.html',{})
 </head>
