--- a/#src/contact.html
+++ b/#src/contact.html
@@ -83,6 +83,7 @@
                                     <a href="#" class="btn btn--gradient">Записаться в клинику</a>
                                 </li>
                             </ul>
+                            <!-- <img src="img/photo/обойти-тц.jpg" alt=""> -->
                             <ul class="contact__routes">
                                 <li>
                                     <div class="route-card">
@@ -93,14 +94,14 @@
                                                     <li>
                                                         <span>1.</span>
                                                         <div>
-                                                            Выйти из метро, <a href="#">обойти ТЦ</a>, выйти на <a
-                                                                href="#">остановку станция Метро Ладожская</a>.
+                                                            Выйти из метро, <a href="#" data-tooltip-img="img/photo/обойти-тц.jpg">обойти ТЦ</a>, выйти на <a
+                                                                href="#" data-tooltip-img="img/photo/метро-Ладожская.jpg">остановку станция Метро Ладожская</a>.
                                                         </div>
                                                     </li>
                                                     <li>
                                                         <span>2.</span>
                                                         <div>
-                                                            От м. Ладожская на маршрутном такси К271 до <a
+                                                            От м. Ладожская на маршрутном такси К271 до <a data-tooltip-img="img/photo/остановка-торговый-центр.jpg"
                                                                 href="#">остановки Торговый центр</a> (время в пути
                                                             примерно 6 минут, 4 остановки)
                                                         </div>
@@ -112,15 +113,14 @@
                                                     <li>
                                                         <span>3.</span>
                                                         <div>
-                                                            Дойти до <a href="#">перекрестка</a>, перейти Большую
+                                                            Дойти до <a href="#" data-tooltip-img="img/photo/перекресток.jpg">перекрестка</a>, перейти Большую
                                                             Пороховскую улицу.
                                                         </div>
                                                     </li>
                                                     <li>
                                                         <span>4.</span>
                                                         <div>
-                                                            Прямо 640 метров до такого-то <a href="#">дома с
-                                                                вывесками</a>.
+                                                            Прямо 640 метров до такого-то <a href="#" data-tooltip-img="img/photo/дома с вывесками.jpg">дома с вывесками</a>.
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -151,14 +151,14 @@
                                                     <li>
                                                         <span>1.</span>
                                                         <div>
-                                                            Выйти из метро, <a href="#">обойти ТЦ</a>, выйти на <a
+                                                            Выйти из метро, <a href="#" data-tooltip-img="img/photo/обойти-тц.jpg">обойти ТЦ</a>, выйти на <a data-tooltip-img="img/photo/обойти-тц.jpg"
                                                                 href="#">остановку станция Метро Ладожская</a>.
                                                         </div>
                                                     </li>
                                                     <li>
                                                         <span>2.</span>
                                                         <div>
-                                                            От м. Ладожская на маршрутном такси К271 до <a
+                                                            От м. Ладожская на маршрутном такси К271 до <a data-tooltip-img="img/photo/обойти-тц.jpg"
                                                                 href="#">остановки Торговый центр</a> (время в пути
                                                             примерно 6 минут, 4 остановки)
                                                         </div>
@@ -170,14 +170,14 @@
                                                     <li>
                                                         <span>3.</span>
                                                         <div>
-                                                            Дойти до <a href="#">перекрестка</a>, перейти Большую
+                                                            Дойти до <a href="#" data-tooltip-img="img/photo/обойти-тц.jpg">перекрестка</a>, перейти Большую
                                                             Пороховскую улицу.
                                                         </div>
                                                     </li>
                                                     <li>
                                                         <span>4.</span>
                                                         <div>
-                                                            Прямо 640 метров до такого-то <a href="#">дома с
+                                                            Прямо 640 метров до такого-то <a href="#" data-tooltip-img="img/photo/обойти-тц.jpg">дома с
                                                                 вывесками</a>.
                                                         </div>
                                                     </li>
