--- a/#src/common/services-card/_services-card.html
+++ b/#src/common/services-card/_services-card.html
@@ -1,4 +1,4 @@
-<div class="services-card">
+<div class="services-card @@classMode">
     <div class="services-card__bg ibg">
         <img src="@@img" alt="">
     </div>
