--- a/#src/services.html
+++ b/#src/services.html
@@ -24,10 +24,52 @@
             </div>
         </div>
 
-        @@include('common/our-services/_our-services.html',{
-        "title": false,
-        "classMod": " pt-0"
-        })
+        <section class="our-services pt-0 padding-wrap">
+            <div class="container-md">
+                <ul class="our-services__list our-services__list--second">
+                    <li>
+                        @@include('common/services-card/_services-card.html', {
+                            "img": "img/photo/services-card-img-1.jpg",
+                            "title": "Лечение зубов и десен ",
+                            "text": "В стоматологии, как и других разделах медицины, есть хирургическое направление лечения (например, имплантация зубов, удаление) и терапевтическое",
+                            "price": "5 000",
+                            "classMode": "services-card--second"
+                        })
+                    </li>
+                    <li>
+                        @@include('common/services-card/_services-card.html', {
+                            "img": "img/photo/services-card-img-2.jpg",
+                            "title": "Протезирование зубов",
+                            "text": "Стоматологическая клиника Dana предлагает разумные цены на протезирование зубов и полный комплекс услуг",
+                            "price": "10 000",
+                            "classMode": "services-card--second"
+                        })
+                    </li>
+                    <li>
+                        @@include('common/services-card/_services-card.html', {
+                            "img": "img/photo/services-card-img-3.jpg",
+                            "title": "Имплантация",
+                            "text": "Ценность сияющей здоровой улыбки осознается, когда возникают проблемы, и эту улыбку приходится прятать от окружающих",
+                            "price": "20 000",
+                            "classMode": "services-card--second"
+                        })
+                    </li>
+                    <li>
+                        @@include('common/services-card/_services-card.html', {
+                            "img": "img/photo/services-card-img-4.jpg",
+                            "title": "Ортодонтия",
+                            "text": "Исправление прикуса – процесс сложный и успех зависит от квалификации врача, проведенного обследования и индивидуального подхода к проблеме",
+                            "price": "5 000",
+                            "classMode": "services-card--second"
+                        })
+                    </li>
+                </ul>
+        
+                <!-- <div class="text-center pt-5">
+                    <a href="#" class="btn btn--dark">Посмотреть все услуги</a>
+                </div> -->
+            </div>
+        </section>
 
         <section class="services-questions padding-wrap pt-3" data-tabs>
             <div class="container-md">
