--- a/#src/common/video-testimonials/_video-testimonials.html
+++ b/#src/common/video-testimonials/_video-testimonials.html
@@ -18,7 +18,8 @@
                 </li> 
                 <li>
                     <a class="video-testimonials__grid-item ibg" data-fancybox href="https://youtu.be/BlOXiHTjIlk">
-                        <img src="img/photo/testimonial-poster-2.jpg" alt="">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BlOXiHTjIlk?autoplay=1&mute=1&controls=0&loop=1&playlist=BlOXiHTjIlk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="video-testimonials__grid-item-text"><span>Lorem ipsum dolor sit amet.</span></div>
                     </a>
                 </li>
                 <li>
