--- a/#src/index.html
+++ b/#src/index.html
@@ -37,7 +37,13 @@
 					</div>
 					<div class="why-us__col why-us__col-2">
 						<div class="why-us__img why-us__img-1 ibg" data-da=".why-us__col-1,991.98,1">
-							<img src="img/photo/why-us-img-1.jpg" alt="">
+							<picture>
+								<!-- desk -->
+								<source srcset="img/photo/why-us-img-1.jpg"  media="(min-width: 768px)" >
+
+								<!-- mob -->
+								<img  src="img/photo/why-us-img-1.jpg" alt="img">
+							</picture>
 						</div>
 					</div>
 					<div class="why-us__col why-us__col-3">
